--- a/client/src/app/components/settings/application-settings/application-settings.component.html
+++ b/client/src/app/components/settings/application-settings/application-settings.component.html
@@ -116,7 +116,8 @@
 						<md-slide-toggle [(ngModel)]="applicationSettings.PASSWORD_ENFORCE_SPECIAL_CHAR.value" 
 							(change)="changed()"
 							class="flex-item" 
-							fxFlex="40px"></md-slide-toggle>
+							fxFlex="40px">
+						</md-slide-toggle>
 					</div>
 				</div>
 			</md-card-content>
