--- a/client/src/app/components/report/scheduled-report-list/scheduled-report-list.component.html
+++ b/client/src/app/components/report/scheduled-report-list/scheduled-report-list.component.html
@@ -1,6 +1,6 @@
 <div style="height:calc(100% - 121px);"> <!-- Browser dependent. Test on multiple browserGroups before setting this value. -->
-	<app-page-loading-indicator *ngIf="!isDataLoaded" [message]="loadingMessage"></app-page-loading-indicator>
-	<div *ngIf="isDataLoaded" class="data-table-scrollable">
+	<app-page-loading-indicator *ngIf="!isDataLoaded || !isUserGroupsLoaded" [message]="loadingMessage"></app-page-loading-indicator>
+	<div *ngIf="isDataLoaded && isUserGroupsLoaded" class="data-table-scrollable">
 		<div class="data-table-filter-container-row flex-container" fxLayout="row" fxLayoutAlign="end center">
 			<div *ngIf="showFilters" class="data-table-filter-container flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
 				<div class="flex-item" fxFlex="152px"></div>
@@ -11,6 +11,11 @@
 					[ngClass]="{'mat-input-container-error':!textFilterStatus.valid}">
 					<input mdInput placeholder="Search" [(ngModel)]="filters.text" (ngModelChange)="applyFilters()">
 				</md-input-container>
+				<md-select [(ngModel)]="filters.status" placeholder="Status" class="mat-select-inline flex-item" fxFlex="150px" (ngModelChange)="applyFilters()">
+					<md-option *ngFor="let status of statusFilterChoices" [value]="status.ordinal">
+						{{status.name}}
+					</md-option>
+				</md-select>
 			</div>
 			<button md-icon-button 
 				(click)="toggleFilters()" 
@@ -31,54 +36,39 @@
 			</button>
 		</div>
 		<div class="unselectable data-table-header-row flex-container" fxLayout="row">
-			<div class="data-table-first-column truncate flex-item" (click)="sortBy('name')" fxFlex="13.37">
-				<span class="data-table-header-label-sortable" [ngClass]="{'data-table-header-label-sorted':sort.current == 'name'}">
-					Group Name
-				</span>
-				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-					'data-table-header-sort-arrow-reverse': sort.reversed,
-					'data-table-header-sort-arrow-inactive': sort.current !== 'name'}">
-					arrow_downward
-				</md-icon>
+			<div class="data-table-first-column truncate flex-item" fxFlex>
+				<span class="data-table-header-label">Subject</span>
 			</div>
-			<div class="data-table-column truncate flex-item" (click)="sortBy('userCount')" fxFlex="69px">
-				<span class="data-table-header-label-sortable" [ngClass]="{'data-table-header-label-sorted':sort.current == 'userCount'}">
-					User Count
-				</span>
-				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-					'data-table-header-sort-arrow-reverse': sort.reversed,
-					'data-table-header-sort-arrow-inactive': sort.current !== 'userCount'}">
-					arrow_downward
-				</md-icon>
+			<div class="data-table-column truncate flex-item" fxFlex="50">
+				<span class="data-table-header-label">Message</span>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex="69">
-				<span class="data-table-header-label">Description</span>
+			<div class="data-table-column truncate flex-item" fxFlex="10">
+				<span class="data-table-header-label">Status</span>
 			</div>
 			<div class="data-table-last-column truncate flex-item" fxFlex="40px" style="text-align:center;">
 				<span class="data-table-header-label">Delete</span>
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
-			<div *ngFor="let group of paginatedData" class="data-table-row">
+			<div *ngFor="let scheduledReport of paginatedData" class="data-table-row">
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
-					(click)="selectUserGroup(group)"
-					(dblclick)="openUserGroupDialog(group)"
-					[ngClass]="{'data-table-row-content-active': group === selectedUserGroup}">
-					<div class="data-table-first-column truncate flex-item" fxFlex="13.37">
-						<a *ngIf="canEdit" (click)="openUserGroupDialog(group)">
-							{{group.name}}
-						</a>
-						<div *ngIf="!canEdit">{{group.name}}</div>
+					(click)="selectScheduledReport(scheduledReport)"
+					(dblclick)="openScheduledReportDialog(scheduledReport)"
+					[ngClass]="{'data-table-row-content-active': scheduledReport === selectedScheduledReport}">
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{scheduledReport.subject}}
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex="69px">
-						{{group.users.length}}
+					<div class="data-table-column truncate flex-item" fxFlex="50">
+						{{scheduledReport.body}}
 					</div>
-					<div class="data-table-column truncate flex-item" fxFlex="69">
-						{{group.description}}
+					<div class="data-table-column truncate flex-item" fxFlex="10">
+						{{scheduledReport.schedule?.active ? "Active" : "Inactive"}}
 					</div>
 					<div class="data-table-last-column flex-item" fxFlex="40px" style="text-align:center;">
-						<md-icon (click)="delete(group)" style="color:#F00;cursor:pointer;margin-top:-4px;">delete</md-icon>
+						<md-icon (click)="deleteScheduledReport(scheduledReport)" mdTooltip="Delete" mdTooltipPosition="after" color="warn" style="cursor:pointer;margin-top:-4px;">
+							delete
+						</md-icon>
 					</div>
 				</div>
 			</div>
