--- a/client/src/app/components/directives/pickers/date-picker-input/date-picker-input.component.html
+++ b/client/src/app/components/directives/pickers/date-picker-input/date-picker-input.component.html
@@ -1,8 +1,8 @@
 <div class="flex-container" fxLayout="row">
 	<md-input-container class="flex-item" fxFlex>
-		<input mdInput [placeholder]="placeholder" [(ngModel)]="dateString" (blur)="checkInput()">
+		<input mdInput [placeholder]="placeholder" [disabled]="disabled" [(ngModel)]="dateString" (blur)="checkInput()">
 	</md-input-container>
-	<button md-icon-button [mdMenuTriggerFor]="picker">
+	<button md-icon-button [disabled]="disabled" [mdMenuTriggerFor]="picker">
 		<md-icon>today</md-icon>
 	</button>
 	<md-menu #picker="mdMenu" xPosition="before" class="date-picker-input-menu">
