--- a/client/src/app/components/report/integrated-report/integrated-report.component.html
+++ b/client/src/app/components/report/integrated-report/integrated-report.component.html
@@ -1,4 +1,4 @@
-<div class="grey-background" style="height: 100%; padding: 24px">
+<div class="grey-background" style="min-height: 100%; padding: 24px">
 	<md-card style="margin-bottom: 24px">
 		<md-card-content>
 			<div class="card-title">
