--- a/client/src/app/components/unverified-data/dialog/edit-unverified-warmspot-dialog/edit-unverified-warmspot-dialog.component.html
+++ b/client/src/app/components/unverified-data/dialog/edit-unverified-warmspot-dialog/edit-unverified-warmspot-dialog.component.html
@@ -10,7 +10,7 @@
 		<md-input-container class="md-input-full-width">
 			<input mdInput placeholder="Description" [(ngModel)]="fields.description">
 		</md-input-container>
-		<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment Type" class="mat-select-row" style="width:100%">
+		<md-select [(ngModel)]="fields.instrumentId" placeholder="Equipment" class="mat-select-row" style="width:100%">
 			<md-option *ngFor="let instrument of availableInstruments" [value]="instrument.id">
 				{{instrument.serialNumber}}
 			</md-option>
